--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@
 }
 
 .jumbotron {
-	background-image: url('photo.jpg') no-repeat center center fixed;
+	background-image: url('photo.jpg') no-repeat bottom right fixed;
 	background-size: cover;
 	height: 500px;
 }
