--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 }
 
 .jumbotron h1 {
-	font-family: "verveine", sans-serif;
+	font-family: "factoria-n7", sans-serif;
 	font-size: 60px;
 	color: #fff;
 }
@@ -21,11 +21,11 @@
 }
 
 .professional-experience h3 {
-	font-family: "verveine", sans-serif;
+	font-family: "factoria-n6", sans-serif;
 	font-size: 36px;
 }
 
 .professional-experience h4 {
-	font-family: "verveine", sans-serif;
+	font-family: "factoria-n6", sans-serif;
 	font-size:  24px;
 }
