--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,3 +69,19 @@ div .date {
 	font-weight: 600;
 	font-size: 20px;
 }
+
+.footer {
+	font-family: "industry", sans-serif;
+	font-weight: 400;
+	font-size: 14px;
+	text-align: center;
+}
+
+.footer a, .footer a:visited {
+	color: #333;
+	text-decoration: none;
+}
+
+.footer a:hover, .footer a:active {
+	text-decoration: underline;
+}
