--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  padding: 40px 60px 0 60px;
+  padding: 40px 20% 0 20%;
   max-width: 100%;
   background: #efefef url("photo.jpg") no-repeat center;
   height: 600px;
@@ -53,7 +53,7 @@ h1 {
 }
 
 main {
-  padding: 40px 60px 0 60px;
+  padding: 40px 20% 0 20%;
 }
 
 a,
