Slight CSS change on button

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ body {
 #button {
   border-radius: 10%;
   background-color: #0e5c0a;
-  border: 1px 1px 1px 1px solid #fefefe;
+  border: 1px 1px 1px 1px solid #fff;
 }
 /* HEADINGS */
 h1,
