--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
 <head lang="en">
     <meta charset="UTF-8">
     <title>AJAX Requests</title>
@@ -8,6 +8,7 @@
 
     <script type="text/javascript" src="/vendors/jquery.min.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+
 </head>
 <body>
     <h1>AJAX Requests</h1>
