--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,8 +1,9 @@
+<!-- ANTHONY MAKI 2016-02-08 -->
 <!DOCTYPE html>
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title></title>
+        <title>Iota!</title>
         <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="/styles/style.css">
@@ -12,17 +13,17 @@
     <body>
 
     <div class="jumbotron">
-        <h1>Iota Cohort</h1>
+        <h1 id="iota" class="reveal">Iota!</h1>
         <div class="container">
 
             <div id="carousel" class="row">
-                <div id="left-arrow" class="col-md-3 text-right">
+                <div id="left-arrow" class="reveal col-md-3 text-right">
                     <button id="left-arrow" type="button" class="btn btn-default btn-lg">
                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                     </button>
                 </div>
                 <div id="focus" class="col-md-6 text-center"></div>
-                <div id="right-arrow" class="col-md-3">
+                <div id="right-arrow" class="reveal col-md-3">
                     <button id="right-arrow" type="button" class="btn btn-default btn-lg">
                         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                     </button>
@@ -30,12 +31,13 @@
             </div>
 
             <div class="row">
-                <div id="carousel-index" class="col-md-12 text-center">
+                <div id="carousel-index" class="reveal col-md-12 text-center">
                     <div class="btn-group"></div>
                 </div>
             </div>
 
         </div>
+    </div>
     </div>
 
     </body>
