--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Hello SQL!</title>
-    <script type="text/javascript" src="/vendors/jquery.min.js"></script>
-    <script type="text/javascript" src="/scripts/clientapp.js"></script>
+  <title>Hello SQL!</title>
+  <script type="text/javascript" src="/vendors/jquery.min.js"></script>
+  <script type="text/javascript" src="/scripts/clientapp.js"></script>
 </head>
+
 <body>
-    <h1>SQL in Node!</h1>
+  <h1>SQL in Node!</h1>
 
-    <form id="sql-form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" />
+  <form id="sql-form">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" />
 
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" />
+    <label for="address">Address:</label>
+    <input type="text" id="address" name="address" />
 
-        <button id="submit-button">Save to DB!</button>
-    </form>
+    <label for="city">City:</label>
+    <input type="text" id="city" name="city" />
+
+    <label for="state">State:</label>
+    <input type="text" id="state" name="state" />
+
+    <label for="zip-code">Zip Code:</label>
+    <input type="text" id="zip-code" name="zip-code" />
+
+    <button id="submit-button">Save to DB!</button>
+  </form>
 
 </body>
+
 </html>
