Small typo on index.html

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -47,7 +47,7 @@
   <footer class="footer">
     <div class="container">
       <p class="text-muted">
-        Here is <a href="/assets/database.txt">the SQL statement</a> used for database creation.
+        Here is <a href="/assets/database.txt">the SQL statement</a> used for table creation.
       </p>
     </div>
   </footer>
