--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/vendors/normalize.css" />
   <link rel="stylesheet" href="/vendors/snackbar.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet" />
   <link rel="stylesheet" href="/styles/style.css" />
   <script type="text/javascript" src="/vendors/jquery.min.js"></script>
   <script type="text/javascript" src="/vendors/snackbar.min.js"></script>
@@ -20,7 +21,7 @@
   <main>
     <section id="task-entry">
       <form id="task-form">
-        <input type="text" id="taskDesc" name="taskDesc" size="50" placeholder="What haven't you done yet?" />
+        <input type="text" id="taskDesc" name="taskDesc" placeholder="What haven't you done yet?" />
         <button type="submit" name="submit-task"><i class="material-icons">add</i></button>
       </form>
     </section>
