--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,10 +11,26 @@
 <body ng-app="myApp">
     <div ng-controller="IndexController">
         <h1>Iota Mongo!</h1>
-        <div ng-repeat="person in people">
-            {{person.name}}
+        <div class="row">
+            <div class="col-md-6">
+                <form>
+                    <label for="name">Name: </label>
+                    <input type="text" id="name" ng-model="name" />
+                    <label for="location">Location: </label>
+                    <input type="text" id="location" ng-model="location" />
+                    <button class="btn btn-info" ng-click="addPerson()">Add Person</button>
+                </form>
+            </div>
         </div>
 
+        <div class="row">
+            <div class="well col-md-3" ng-repeat="person in people">
+                <p>{{person.name}}</p>
+                <p>{{person.location}}</p>
+                <button class="edit btn" ng-click="update(person._id)">Update</button>
+                <button class="delete btn btn-danger" ng-click="delete(person._id)">Delete</button>
+            </div>
+        </div>
     </div>
 
 </body>
