--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>Mongo!</title>
     <script type="text/javascript" src="/vendors/angular.min.js"></script>
-    <!--<script type="text/javascript" src="/vendors/angular-route.min.js"></script>-->
     <script type="text/javascript" src="/scripts/app.js"></script>
 
     <link rel="stylesheet" href="/vendors/bootstrap.min.css" />
@@ -13,24 +12,24 @@
         <h1>Iota Mongo!</h1>
         <div class="row">
             <div class="col-md-6">
-                <form>
-                    <label for="name">Name: </label>
-                    <input type="text" id="name" ng-model="name" />
-                    <label for="location">Location: </label>
-                    <input type="text" id="location" ng-model="location" />
-                    <button class="btn btn-info" ng-click="addPerson()">Add Person</button>
-                </form>
+            <form>
+                <label for="name">Name: </label>
+                <input type="text" ng-model="name" id="name" />
+                <label for="location">Location: </label>
+                <input type="text" ng-model="location" id="location" />
+                <button class="btn btn-info" ng-click="addPerson()">Add Person</button>
+            </form>
+            </div>
+        </div>
+        <div class="row">
+            <div ng-repeat="person in people" class="well col-md-3">
+                <p>{{person.name}}</p>
+                <p>{{person.location}}</p>
+                <button ng-click="update(person._id)" class="btn btn-default">Update</button>
+                <button ng-click="delete(person._id)" class="btn btn-danger">Delete</button>
             </div>
         </div>
 
-        <div class="row">
-            <div class="well col-md-3" ng-repeat="person in people">
-                <p>{{person.name}}</p>
-                <p>{{person.location}}</p>
-                <button class="edit btn" ng-click="update(person._id)">Update</button>
-                <button class="delete btn btn-danger" ng-click="delete(person._id)">Delete</button>
-            </div>
-        </div>
     </div>
 
 </body>
