--- a/public/views/templates/remove.html
+++ b/public/views/templates/remove.html
@@ -8,5 +8,5 @@
     Equipped with <em>{{superHero.power_name}}</em>!
   </p>
   <!-- Couldn't remember/find how to get the specific object I want to remove -->
-  <button class="btn btn-danger" ng-click="removeHero(superHero)">Delete Superhero</button>
+  <button class="btn btn-danger" ng-click="removeHero(superHero._id)">Delete Superhero</button>
 </section>
