Include uglify in grunt watch, add MainCtrl, server.js and index.js fully functional

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Prime Assessment 3: Full-Stack Application (MEAN)</title>
+    <link rel="stylesheet" href="assets/vendors/bootstrap/dist/css/bootstrap.min.css" charset="utf-8"/>
+    <script src="assets/vendors/angular/angular.min.js" charset="utf-8"></script>
+    <script src="assets/scripts/client.min.js" charset="utf-8"></script>
   </head>
-  <body ng-controller="MainCtrl">
-    
+  <body ng-controller="MainCtrl as list" class="container">
+    <header>
+      <h1>Prime Assessment 3 <small>Full-Stack App (MEAN)</small></h1>
+    </header>
+    <main>
+      
+    </main>
   </body>
 </html>
